<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48FFC107"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="181dp"
        android:layout_height="54dp"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <androidx.cardview.widget.CardView
        android:layout_width="369dp"
        android:layout_height="362dp"
        android:layout_marginLeft="50px"
        android:layout_marginTop="50px"
        android:transitionGroup="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189">

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="50px"
            android:layout_marginTop="200px"
            android:background="#27BFBBBB"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:layout_marginLeft="50px"
            android:layout_marginTop="500px"
            android:background="#27BFBBBB"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="99dp"
            android:layout_height="39dp"
            android:layout_marginLeft="50px"
            android:layout_marginTop="70px"
            android:text="@string/celular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:layout_marginLeft="50px"
            android:layout_marginTop="400px"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200px"
            android:layout_marginTop="750px"
            android:background="#FF9800"
            android:backgroundTint="#FF9800"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="500px"
            android:layout_marginTop="750px"
            android:background="#FF9800"
            android:backgroundTint="#FF9800"
            android:text="@string/cancelar" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="335dp"
        android:layout_height="261dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="454dp" />

</androidx.constraintlayout.widget.ConstraintLayout>